# CppStarter

./: .clang-format  .clang-tidy  .cspell.json  .prettierignore  CMakeLists.txt  README.md
.github/workflows/: customize.sh  quality.yaml  static_analysis.yaml  template_customization.yaml  template_quality.yaml
Tests/: .clang-tidy  CMakeLists.txt  test.cpp
tests/: test.cpp
